# kmath

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
examples/: CMakeLists.txt  map_ex.c  matrix_ex.cpp  matrix_understanding_ex.cpp
gtests/: CMakeLists.txt  matrix_test.cpp
src/: array_t.h  errors.h  keyvalue_t.h  kmath.h  map.h  matrix.h  testing.h
